--- a/imdb-films-by-actor-for-10k-actors/Code_Imdb-Films-By-Actor.ipynb
+++ b/imdb-films-by-actor-for-10k-actors/Code_Imdb-Films-By-Actor.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "[191873 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "[191873 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "max      2021.000000  2.371548e+06       9.300000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "[44456 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "(0.0, 2519735.619196354)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
        "[44332 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "(0.0, 10.161107029107672)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
        "[44398 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
        "(1914.0, 2035.7580097123168)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1202,7 @@
        "[44238 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
        "[233 rows x 3 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
        "(500000.0, 2465112.25)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1494,7 @@
        "(1914.0, 2026.35)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1520,19 +1520,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlation between nr of votes and rating: 0.08969464871137453\n"
+      "Correlation between nr of year and votes: 0.08969464871137453\n"
      ]
     }
    ],
    "source": [
-    "print('Correlation between nr of votes and rating: {}'.format(votes_rating_year[\"Year\"].corr(votes_rating_year[\"Votes\"])))"
+    "print('Correlation between nr of year and votes: {}'.format(votes_rating_year[\"Year\"].corr(votes_rating_year[\"Votes\"])))"
    ]
   },
   {
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1560,7 @@
        "(1914.0, 2026.35)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1593,19 +1593,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlation between nr of votes and rating: -0.25218151070186756\n"
+      "Correlation between nr of year and rating: -0.25218151070186756\n"
      ]
     }
    ],
    "source": [
-    "print('Correlation between nr of votes and rating: {}'.format(votes_rating_year[\"Year\"].corr(votes_rating_year[\"Rating\"])))"
+    "print('Correlation between nr of year and rating: {}'.format(votes_rating_year[\"Year\"].corr(votes_rating_year[\"Rating\"])))"
    ]
   },
   {
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1661,7 @@
        "Name: Rating, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1699,7 @@
        "Name: Rating, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1737,7 @@
        "Name: Rating, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1755,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1863,7 @@
        "10357  The Lord of the Rings: The Fellowship of the Ring  1680215     8.8"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
        "[174 rows x 2 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2113,7 +2113,7 @@
        "[140 rows x 2 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2366,7 +2366,7 @@
        "33      Gianni Russo      2"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2484,7 +2484,7 @@
        "[140 rows x 1 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2503,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2714,7 +2714,7 @@
        "Viggo Mortensen   [The Lord of the Rings: The Fellowship of the ..."
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2740,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2839,7 +2839,7 @@
        "[41050 rows x 1 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2858,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2880,7 +2880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2923,7 +2923,7 @@
        "0      Michael Caine                         6"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2941,7 +2941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3182,7 +3182,7 @@
        "33      Gianni Russo      2"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3200,7 +3200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3216,7 +3216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3492,7 +3492,7 @@
        "31       Julie Gregg         John Cazale                         2"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3511,7 +3511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3734,7 +3734,7 @@
        "22                         Hamlet  1948  15476     7.6"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
