--- a/genetic-algorithm/ga_test.ipynb
+++ b/genetic-algorithm/ga_test.ipynb
@@ -124,7 +124,8 @@
     "    n_iterations=20, \n",
     "    n_pops=100, \n",
     "    n_genes=len(knapsack), \n",
-    "    mutation_chance=0.05)"
+    "    mutation_chance=0.05\n",
+    ")"
    ]
   },
   {
