ML Algorithms from scratch

--- a/ml-algorithms-from-scratch/ml_algorithms_test.ipynb
+++ b/ml-algorithms-from-scratch/ml_algorithms_test.ipynb
@@ -21,6 +21,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K-Nearest Neighbours"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -37,13 +44,6 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=89)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### K-Nearest Neighbours"
    ]
   },
   {
@@ -140,17 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def RMSE(predicted, actual):\n",
-    "    return np.sqrt(np.sum((predicted-actual)**2)/len(actual))"
+    "    return np.sqrt(np.mean((predicted-actual)**2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "20.613500959057557"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,16 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x19bf1229280>]"
+       "[<matplotlib.lines.Line2D at 0x19bf15860a0>]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
