--- a/ml-algorithms-from-scratch/ml_algorithms_test.ipynb
+++ b/ml-algorithms-from-scratch/ml_algorithms_test.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_iris\n",
+    "from sklearn.datasets import load_iris, load_breast_cancer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.datasets import make_regression\n",
     "import numpy as np\n",
@@ -74,8 +74,15 @@
    "source": [
     "knn=KNN(3)\n",
     "knn.fit(X_train, y_train)\n",
-    "predictions=knn.predict(X_test)\n",
-    "\n",
+    "predictions=knn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "np.sum(predictions == y_test) / len(y_test)"
    ]
   },
@@ -167,8 +174,15 @@
    "source": [
     "lr=LinearRegression(learning_rate=0.01)\n",
     "lr.fit(X_train, y_train)\n",
-    "predicted=lr.predict(X_test)\n",
-    "\n",
+    "predicted=lr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "RMSE(predicted, y_test)"
    ]
   },
@@ -204,6 +218,72 @@
     "plt.figure(figsize=(10,10))\n",
     "plt.scatter(X, y)\n",
     "plt.plot(X, lr.predict(X), c='red')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cancer = load_breast_cancer()\n",
+    "X, y = cancer.data, cancer.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=89)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from logistic_regression import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg=LogisticRegression(learning_rate=0.01)\n",
+    "log_reg.fit(X_train, y_train)\n",
+    "predicted=log_reg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9298245614035088"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(predicted == y_test)/len(y_test)"
    ]
   },
   {
