--- a/deep-convolutional-variational-autoencoder/dcvae_test.ipynb
+++ b/deep-convolutional-variational-autoencoder/dcvae_test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Convolutional Variational Autoencoder Train"
+    "# Deep Convolutional Variational Autoencoder Test"
    ]
   },
   {
